Added key null check

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Python/Easy/.ipynb_checkpoints/Design an Ordered Stream-checkpoint.ipynb
 Python/Easy/.ipynb_checkpoints/Design Underground System-checkpoint.ipynb
+Python/Medium/.ipynb_checkpoints/Design Underground System-checkpoint.ipynb
